--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,11 @@
+/* stop scrolling when open modal
+bootstrap attaches modal-open to body when modal is open
+*/
+body.modal-open {
+  height: 100vh;
+  overflow-y: hidden;
+}
+
 .monsterImage {
   width: 200px;
   height: auto;
