autokill switch now bootstrap, but doesnt work / multiplier works!

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -68,3 +68,12 @@ width: 11rem;
    transform: scale(1.05);
 box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
+
+.form-range{
+  width:200px; /* sample value - set it as you like*/
+  padding: 10px;
+}
+
+.form-check-input{
+  float: none !important;
+}
