--- a/front/src/index.css
+++ b/front/src/index.css
@@ -85,3 +85,9 @@ box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 .form-check-input{
   float: none !important;
 }
+
+
+a, a:hover{
+  text-decoration: none;
+  color: black;
+}
