--- a/front/src/index.css
+++ b/front/src/index.css
@@ -20,21 +20,6 @@ body.modal-open {
 
 }
 
-.cardImage {
-  width: 150px;
-  height: 200px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  object-fit: contain;
-}
-
-.card-title {
-    font-size:17px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
 @font-face {
   font-family: 'osrs-font';
   font-weight: normal;
@@ -68,13 +53,33 @@ body.modal-open {
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
 /* padding: 14px 80px 18px 36px; */
 cursor: pointer;
-/* height: 18rem; */
-width: 11rem;
 }
 
+
+/* @media (max-width: 575.98px) {
+  .card{
+    width: 50%;
+  }
+} */
+
 .card:hover{
-   transform: scale(1.05);
-box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+.cardImage {
+  width: 150px;
+  height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: contain;
+}
+
+.card-title {
+    font-size:17px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .form-range{
