--- a/front/src/index.css
+++ b/front/src/index.css
@@ -8,18 +8,18 @@ body.modal-open {
   height: 100vh;
   overflow-y: hidden;
 }
-
+ 
 .searchBar {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
+ 
 .monsterImage {
-  width: 200px;
+  /*width: 200px;*/
+  width: auto;
   height: auto;
-
 }
-
+ 
 @font-face {
   font-family: 'osrs-font';
   font-weight: normal;
@@ -28,8 +28,8 @@ body.modal-open {
   /* other formats include: 'woff2', 'truetype, 'opentype',
                             'embedded-opentype', and 'svg' */
 }
-
-.lootText { 
+ 
+.lootText {
   font-family: 'osrs-font';
   display: inline-block;
   zoom:1;
@@ -39,34 +39,29 @@ body.modal-open {
   margin: auto;
   line-height: 50px;
 }
-
+ 
 .monster {
   margin: auto;
   text-align: center;
 }
-
+ 
 /* highlights on hover */
-
+ 
 .card{
   border-radius: 4px;
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
 /* padding: 14px 80px 18px 36px; */
-cursor: pointer;
+  cursor: pointer;
+/* height: 18rem; */
+  width: 11rem;
 }
-
-
-/* @media (max-width: 575.98px) {
-  .card{
-    width: 50%;
-  }
-} */
-
+ 
 .card:hover{
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
-
+ 
 .cardImage {
   width: 150px;
   height: 200px;
@@ -74,25 +69,50 @@ cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   object-fit: contain;
+  padding-top: 10px;
 }
-
+ 
 .card-title {
-    font-size:17px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  font-size:17px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: center;
 }
-
+ 
 .form-range{
   width:200px; /* sample value - set it as you like*/
   padding: 10px;
 }
-
+ 
 .form-check-input{
   float: none !important;
 }
-
-
+ 
+ 
 a, a:hover{
   text-decoration: none;
   color: black;
+}
+ 
+@media (max-width: 576px) {
+    .cardImage {
+        width: 70px;
+        height: 90px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        object-fit: contain;
+    }
+    .card-title {
+        font-size:16px;
+    }
+    .card{
+        border-radius: 4px;
+        box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+        transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+        cursor: pointer;
+    }
+    .customRow {
+        width: 50%;
+    }
 }
